[project]
name = "doyoubusytg"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nifle3", email = "nifle3123@gmail.com"},
]
dependencies = ["aiogram>=3.20.0.post0", "tinydb>=4.8.2", "APScheduler>=3.11.0", "aiohttp>=3.11.18"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev.cmd = "python src/areyoubusytg"
dev.env_file = ".env"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
